--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -138,6 +138,7 @@
     "@edge-runtime/cookies": "3.4.1",
     "@edge-runtime/ponyfill": "2.4.0",
     "@edge-runtime/primitives": "3.1.1",
+    "@edge-runtime/node-utils": "2.1.1",
     "@hapi/accept": "5.0.2",
     "@jest/transform": "29.5.0",
     "@jest/types": "29.5.0",
