--- a/packages/next/tsconfig.json
+++ b/packages/next/tsconfig.json
@@ -7,6 +7,7 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "jsx": "react",
+    "resolveJsonModule": true,
     "stripInternal": true
   },
   "exclude": [
