--- a/.github/workflows/build_reusable.yml
+++ b/.github/workflows/build_reusable.yml
@@ -55,7 +55,7 @@ env:
   TURBO_VERSION: 1.10.9
   NODE_MAINTENANCE_VERSION: 16
   NODE_LTS_VERSION: 18.16.1
-  TEST_CONCURRENCY: 6
+  TEST_CONCURRENCY: 8
   # disable backtrace for test snapshots
   RUST_BACKTRACE: 0
 
@@ -78,7 +78,7 @@ jobs:
       - 'self-hosted'
       - 'linux'
       - 'x64'
-      - 'hosted-ci-cd:ignore'
+      - 'metal'
 
     steps:
       - run: fnm install ${{ inputs.nodeVersion || env.NODE_LTS_VERSION }}
