--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -10,6 +10,7 @@ env:
   TURBO_VERSION: 1.10.9
   NODE_MAINTENANCE_VERSION: 16
   NODE_LTS_VERSION: 18.16.1
+  CARGO_PROFILE_RELEASE_LTO: 'true'
 
 jobs:
   build:
@@ -231,6 +232,7 @@ jobs:
           options: >-
             -e RUST_TOOLCHAIN=${{ env.RUST_TOOLCHAIN }}
             -e CARGO_INCREMENTAL=${{ env.CARGO_INCREMENTAL }}
+            -e CARGO_PROFILE_RELEASE_LTO=${{ env.CARGO_PROFILE_RELEASE_LTO }}
             -e CARGO_TERM_COLOR=${{ env.CARGO_TERM_COLOR }}
             -e RUST_BACKTRACE=${{ env.RUST_BACKTRACE }}
             -e CARGO_REGISTRIES_CRATES_IO_PROTOCOL=${{ env.CARGO_REGISTRIES_CRATES_IO_PROTOCOL }}
