--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,5 @@
 [workspace]
+resolver = "2"
 
 members = [
   "scripts/send-trace-to-jaeger",
@@ -22,8 +23,9 @@ opt-level = 2
 [profile.dev.package."*"]
 debug-assertions = false
 
-[profile.release]
-lto = true
+# Set the settings for build scripts and proc-macros.
+[profile.dev.build-override]
+opt-level = 3
 
 [workspace.dependencies]
 # Workspace crates
@@ -44,11 +46,11 @@ swc_core = { version = "0.79.40" }
 testing = { version = "0.33.21" }
 
 # Turbo crates
-turbopack-binding = { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230809.2" }
+turbopack-binding = { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230811.2" }
 # [TODO]: need to refactor embed_directory! macro usages, as well as resolving turbo_tasks::function, macros..
-turbo-tasks = { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230809.2" }
+turbo-tasks = { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230811.2" }
 # [TODO]: need to refactor embed_directory! macro usage in next-core
-turbo-tasks-fs = { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230809.2" }
+turbo-tasks-fs = { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230811.2" }
 
 # General Deps
 
