--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,8 @@
         "../../packages/next-swc/crates/**",
         "../../**/Cargo.toml",
         "../../**/Cargo.lock",
-        "../../.github/workflows/build_and_deploy.yml"
+        "../../.github/workflows/build_and_deploy.yml",
+        "../../rust-toolchain"
       ],
       "dependsOn": ["^build-native"],
       "outputs": ["native/*.node"]
@@ -18,7 +19,8 @@
         "../../packages/next-swc/crates/**",
         "../../**/Cargo.toml",
         "../../**/Cargo.lock",
-        "../../.github/workflows/build_and_deploy.yml"
+        "../../.github/workflows/build_and_deploy.yml",
+        "../../rust-toolchain"
       ],
       "dependsOn": ["^build-native-release"],
       "outputs": ["native/*.node"]
@@ -29,7 +31,8 @@
         "../../packages/next-swc/crates/**",
         "../../**/Cargo.toml",
         "../../**/Cargo.lock",
-        "../../.github/workflows/build_and_deploy.yml"
+        "../../.github/workflows/build_and_deploy.yml",
+        "../../rust-toolchain"
       ],
       "dependsOn": ["^build-native-no-plugin"],
       "outputs": ["native/*.node"]
@@ -40,7 +43,8 @@
         "../../packages/next-swc/crates/**",
         "../../**/Cargo.toml",
         "../../**/Cargo.lock",
-        "../../.github/workflows/build_and_deploy.yml"
+        "../../.github/workflows/build_and_deploy.yml",
+        "../../rust-toolchain"
       ],
       "dependsOn": ["^build-native-no-plugin-woa"],
       "outputs": ["native/*.node"]
@@ -51,7 +55,8 @@
         "../../packages/next-swc/crates/**",
         "../../**/Cargo.toml",
         "../../**/Cargo.lock",
-        "../../.github/workflows/build_and_deploy.yml"
+        "../../.github/workflows/build_and_deploy.yml",
+        "../../rust-toolchain"
       ],
       "dependsOn": ["^build-native-no-plugin-woa-release"],
       "outputs": ["native/*.node"]
@@ -62,7 +67,8 @@
         "../../packages/next-swc/crates/**",
         "../../**/Cargo.toml",
         "../../**/Cargo.lock",
-        "../../.github/workflows/build_and_deploy.yml"
+        "../../.github/workflows/build_and_deploy.yml",
+        "../../rust-toolchain"
       ],
       "dependsOn": ["^build-wasm"],
       "outputs": ["crates/wasm/pkg/*"]
