--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -263,28 +263,8 @@ jobs:
         if: ${{ matrix.settings.setup }}
 
       - name: Build in docker
-        uses: addnab/docker-run-action@v3
         if: ${{ matrix.settings.docker }}
-        with:
-          image: ${{ matrix.settings.docker }}
-          options: >-
-            -e RUST_TOOLCHAIN
-            -e RUST_BACKTRACE
-            -e NAPI_CLI_VERSION
-            -e CARGO_TERM_COLOR
-            -e CARGO_INCREMENTAL
-            -e CARGO_PROFILE_RELEASE_LTO
-            -e CARGO_REGISTRIES_CRATES_IO_PROTOCOL
-            -e TURBO_API
-            -e TURBO_TEAM
-            -e TURBO_TOKEN
-            -e TURBO_VERSION
-            -e TURBO_REMOTE_ONLY
-            -v ${{ env.HOME }}/.cargo/git:/root/.cargo/git
-            -v ${{ env.HOME }}/.cargo/registry:/root/.cargo/registry
-            -v ${{ github.workspace }}:/build
-            -w /build
-          run: ${{ matrix.settings.build }}
+        run: docker run -v "/var/run/docker.sock":"/var/run/docker.sock"  -e RUST_TOOLCHAIN -e RUST_BACKTRACE -e NAPI_CLI_VERSION -e CARGO_TERM_COLOR -e CARGO_INCREMENTAL -e CARGO_PROFILE_RELEASE_LTO -e CARGO_REGISTRIES_CRATES_IO_PROTOCOL -e TURBO_API -e TURBO_TEAM -e TURBO_TOKEN -e TURBO_VERSION -e TURBO_REMOTE_ONLY -v ${{ env.HOME }}/.cargo/git:/root/.cargo/git -v ${{ env.HOME }}/.cargo/registry:/root/.cargo/registry -v ${{ github.workspace }}:/build -w /build --entrypoint=bash ${{ matrix.settings.docker }} -c "${${{ matrix.settings.build }}//$'\n'/;}"
 
       - name: 'Build'
         run: ${{ matrix.settings.build }}
