--- a/packages/third-parties/package.json
+++ b/packages/third-parties/package.json
@@ -14,7 +14,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "manual-build": "rm -rf dist && tsc -d -p tsconfig.json",
+    "build": "rm -rf dist && tsc -d -p tsconfig.json",
     "prepublishOnly": "cd ../../ && turbo run build",
     "updateThirdParties": "rm -rf src/**/index.tsx && node scripts/update-third-parties",
     "dev": "tsc -d -w -p tsconfig.json",
