fix build script

--- a/packages/third-parties/tsconfig.json
+++ b/packages/third-parties/tsconfig.json
@@ -9,6 +9,6 @@
     "module": "commonjs",
     "rootDir": "src"
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "src/**/index.tsx"]
 }
