--- a/packages/third-parties/package.json
+++ b/packages/third-parties/package.json
@@ -14,9 +14,10 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "rm -rf dist && tsc -d -p tsconfig.json",
+    "release": "rm -rf dist && tsc -d -p tsconfig.json",
+    "build": "pnpm release",
     "prepublishOnly": "cd ../../ && turbo run build",
-    "updateThirdParties": "rm -rf src/**/index.tsx && node scripts/update-third-parties",
+    "update-third-parties": "rm -rf src/**/index.tsx && node scripts/update-third-parties",
     "dev": "tsc -d -w -p tsconfig.json",
     "typescript": "tsec --noEmit -p tsconfig.json"
   },
