--- a/packages/third-parties/tsconfig.json
+++ b/packages/third-parties/tsconfig.json
@@ -9,6 +9,6 @@
     "module": "commonjs",
     "rootDir": "src"
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules"]
 }
