--- a/packages/third-parties/package.json
+++ b/packages/third-parties/package.json
@@ -6,6 +6,9 @@
     "url": "vercel/next.js",
     "directory": "packages/third-parties"
   },
+  "exports": {
+    "./google": "./dist/google/index.js"
+  },
   "files": [
     "dist"
   ],
