--- a/packages/third-parties/package.json
+++ b/packages/third-parties/package.json
@@ -21,14 +21,15 @@
     "typescript": "tsec --noEmit -p tsconfig.json"
   },
   "dependencies": {
-    "next": "^13.0.0",
     "third-party-capital": "1.0.17"
   },
   "devDependencies": {
+    "next": "13.4.14",
     "outdent": "0.8.0",
     "prettier": "2.5.1"
   },
   "peerDependencies": {
+    "next": "^13.0.0",
     "react": "^18.2.0"
   }
 }
