--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -159,7 +159,8 @@ jobs:
               npm i -g "@napi-rs/cli@${NAPI_CLI_VERSION}" "turbo@${TURBO_VERSION}" && corepack enable && pnpm -v && node -v &&
               unset CC_x86_64_unknown_linux_gnu && unset CC &&
               turbo run build-native-release --remote-cache-timeout 90 --summarize -- --target x86_64-unknown-linux-gnu &&
-              strip packages/next-swc/native/next-swc.*.node
+              strip packages/next-swc/native/next-swc.*.node &&
+              objdump -T packages/next-swc/native/next-swc.*.node | grep GLIBC_
 
           - host:
               - 'self-hosted'
@@ -204,7 +205,8 @@ jobs:
               npm i -g "@napi-rs/cli@${NAPI_CLI_VERSION}" "turbo@${TURBO_VERSION}" && corepack enable &&
               export CC_aarch64_unknown_linux_gnu=/usr/aarch64-unknown-linux-gnu/bin/aarch64-unknown-linux-gnu-gcc &&
               turbo run build-native-release --remote-cache-timeout 90 --summarize -- --target aarch64-unknown-linux-gnu --features plugin,rustls-tls,tracing/release_max_level_info &&
-              llvm-strip -x packages/next-swc/native/next-swc.*.node
+              llvm-strip -x packages/next-swc/native/next-swc.*.node &&
+              objdump -T packages/next-swc/native/next-swc.*.node | grep GLIBC_
 
           - host:
               - 'self-hosted'
