skip other builds

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -79,64 +79,64 @@ jobs:
       fail-fast: false
       matrix:
         settings:
-          - host:
-              - 'self-hosted'
-              - 'macos'
-              - 'arm64'
+          # - host:
+          #     - 'self-hosted'
+          #     - 'macos'
+          #     - 'arm64'
 
-            target: 'x86_64-apple-darwin'
-            build: |
-              npm i -g "@napi-rs/cli@${NAPI_CLI_VERSION}" "turbo@${TURBO_VERSION}" && corepack enable
-              turbo run build-native-release --remote-cache-timeout 90 --summarize -- --target x86_64-apple-darwin --release
-              strip -x packages/next-swc/native/next-swc.*.node
+          #   target: 'x86_64-apple-darwin'
+          #   build: |
+          #     npm i -g "@napi-rs/cli@${NAPI_CLI_VERSION}" "turbo@${TURBO_VERSION}" && corepack enable
+          #     turbo run build-native-release --remote-cache-timeout 90 --summarize -- --target x86_64-apple-darwin --release
+          #     strip -x packages/next-swc/native/next-swc.*.node
 
-          - host:
-              - 'self-hosted'
-              - 'macos'
-              - 'arm64'
+          # - host:
+          #     - 'self-hosted'
+          #     - 'macos'
+          #     - 'arm64'
 
-            target: 'aarch64-apple-darwin'
-            build: |
-              export CC=$(xcrun -f clang);
-              export CXX=$(xcrun -f clang++);
-              SYSROOT=$(xcrun --sdk macosx --show-sdk-path);
-              export CFLAGS="-isysroot $SYSROOT -isystem $SYSROOT";
-              npm i -g "@napi-rs/cli@${NAPI_CLI_VERSION}" "turbo@${TURBO_VERSION}" && corepack enable
-              turbo run build-native-release --remote-cache-timeout 90 --summarize -- --target aarch64-apple-darwin
-              strip -x packages/next-swc/native/next-swc.*.node
+          #   target: 'aarch64-apple-darwin'
+          #   build: |
+          #     export CC=$(xcrun -f clang);
+          #     export CXX=$(xcrun -f clang++);
+          #     SYSROOT=$(xcrun --sdk macosx --show-sdk-path);
+          #     export CFLAGS="-isysroot $SYSROOT -isystem $SYSROOT";
+          #     npm i -g "@napi-rs/cli@${NAPI_CLI_VERSION}" "turbo@${TURBO_VERSION}" && corepack enable
+          #     turbo run build-native-release --remote-cache-timeout 90 --summarize -- --target aarch64-apple-darwin
+          #     strip -x packages/next-swc/native/next-swc.*.node
 
-          - host:
-              - 'self-hosted'
-              - 'windows'
-              - 'x64'
+          # - host:
+          #     - 'self-hosted'
+          #     - 'windows'
+          #     - 'x64'
 
-            build: |
-              corepack enable
-              npm i -g "@napi-rs/cli@${NAPI_CLI_VERSION}" "turbo@${TURBO_VERSION}"
-              turbo run build-native-release --remote-cache-timeout 90 --summarize -- --target x86_64-pc-windows-msvc
-            target: 'x86_64-pc-windows-msvc'
+          #   build: |
+          #     corepack enable
+          #     npm i -g "@napi-rs/cli@${NAPI_CLI_VERSION}" "turbo@${TURBO_VERSION}"
+          #     turbo run build-native-release --remote-cache-timeout 90 --summarize -- --target x86_64-pc-windows-msvc
+          #   target: 'x86_64-pc-windows-msvc'
 
-          - host:
-              - 'self-hosted'
-              - 'windows'
-              - 'x64'
+          # - host:
+          #     - 'self-hosted'
+          #     - 'windows'
+          #     - 'x64'
 
-            build: |
-              corepack enable
-              npm i -g "@napi-rs/cli@${NAPI_CLI_VERSION}" "turbo@${TURBO_VERSION}"
-              turbo run build-native-no-plugin --remote-cache-timeout 90 --summarize -- --release --target i686-pc-windows-msvc
-            target: 'i686-pc-windows-msvc'
+          #   build: |
+          #     corepack enable
+          #     npm i -g "@napi-rs/cli@${NAPI_CLI_VERSION}" "turbo@${TURBO_VERSION}"
+          #     turbo run build-native-no-plugin --remote-cache-timeout 90 --summarize -- --release --target i686-pc-windows-msvc
+          #   target: 'i686-pc-windows-msvc'
 
-          - host:
-              - 'self-hosted'
-              - 'windows'
-              - 'x64'
+          # - host:
+          #     - 'self-hosted'
+          #     - 'windows'
+          #     - 'x64'
 
-            target: 'aarch64-pc-windows-msvc'
-            build: |
-              corepack enable
-              npm i -g "@napi-rs/cli@${NAPI_CLI_VERSION}" "turbo@${TURBO_VERSION}"
-              turbo run build-native-no-plugin-woa-release --remote-cache-timeout 90 --summarize -- --target aarch64-pc-windows-msvc
+          #   target: 'aarch64-pc-windows-msvc'
+          #   build: |
+          #     corepack enable
+          #     npm i -g "@napi-rs/cli@${NAPI_CLI_VERSION}" "turbo@${TURBO_VERSION}"
+          #     turbo run build-native-no-plugin-woa-release --remote-cache-timeout 90 --summarize -- --target aarch64-pc-windows-msvc
 
           - host:
               - 'self-hosted'
