--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,11 +46,11 @@ swc_core = { version = "0.79.59" }
 testing = { version = "0.33.21" }
 
 # Turbo crates
-turbopack-binding = { git = "https://github.com/vercel/turbo.git", branch = "jrl-page-prefix" }
+turbopack-binding = { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230816.1" }
 # [TODO]: need to refactor embed_directory! macro usages, as well as resolving turbo_tasks::function, macros..
-turbo-tasks = { git = "https://github.com/vercel/turbo.git", branch = "jrl-page-prefix" }
+turbo-tasks = { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230816.1" }
 # [TODO]: need to refactor embed_directory! macro usage in next-core
-turbo-tasks-fs = { git = "https://github.com/vercel/turbo.git", branch = "jrl-page-prefix" }
+turbo-tasks-fs = { git = "https://github.com/vercel/turbo.git", tag = "turbopack-230816.1" }
 
 # General Deps
 
