--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "@babel/preset-flow": "7.14.5",
     "@babel/preset-react": "7.14.5",
     "@edge-runtime/jest-environment": "2.2.5",
+    "@emotion/cache": "11.11.0",
+    "@emotion/react": "11.11.1",
     "@fullhuman/postcss-purgecss": "1.3.0",
     "@mdx-js/loader": "2.2.1",
     "@mdx-js/react": "2.2.1",
