Add nested-deps bench to workspace

--- a/bench/nested-deps/package.json
+++ b/bench/nested-deps/package.json
@@ -15,6 +15,7 @@
     "cross-env": "^7.0.3",
     "pretty-ms": "^7.0.1",
     "rimraf": "^3.0.2",
-    "yargs": "16.2.0"
+    "yargs": "16.2.0",
+    "next": "workspace:*"
   }
 }
