Move fuzzponent to separate package to leverage in multiple benchmarks

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,6 @@
 packages:
   - 'packages/*'
+  - 'bench/fuzzponent/'
   - 'bench/vercel/'
   - 'bench/nested-deps'
   - 'packages/next-swc/crates/next-dev-tests/test-harness'
