--- a/bench/next-minimal-server/package.json
+++ b/bench/next-minimal-server/package.json
@@ -1,7 +1,8 @@
 {
   "name": "next-minimal-server",
   "description": "Minimal server for Next.js for benchmarking/perf analysis purposes.",
-  "scripts": {
-    "start": "node start.js"
+  "bin": "./bin/minimal-server.js",
+  "peerDependencies": {
+    "next": "workspace:*"
   }
 }
