--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,6 @@
 packages:
   - 'packages/*'
-  - 'bench/fuzzponent/'
-  - 'bench/vercel/'
-  - 'bench/nested-deps'
+  - 'bench/*'
   - 'packages/next-swc/crates/next-dev-tests/test-harness'
   - 'packages/next-swc/crates/next-dev-tests/tests'
   - 'packages/next-swc/crates/next-core/js'
