--- a/socket.yaml
+++ b/socket.yaml
@@ -1,6 +1,12 @@
 # top level version field is required
 version: 2
 
+triggerPaths:
+  - packages/*/package.json
+  - package.json
+  - pnpm-lock.yaml
+  - pnpm-workspace.yaml
+
 projectIgnorePaths:
   - .github/
   - bench/
