--- a/socket.yaml
+++ b/socket.yaml
@@ -8,7 +8,7 @@ triggerPaths:
   - 'pnpm-workspace.yaml'
 
 projectIgnorePaths:
-  - '.github/
+  - '.github/'
   - 'bench/'
   - 'contributing/'
   - 'docs/'
