--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -268,6 +268,12 @@ jobs:
         run: ${{ matrix.settings.setup }}
         if: ${{ matrix.settings.setup }}
 
+      - name: Cache on ${{ github.ref_name }}
+        uses: ijjk/rust-cache@turbo-cache
+        with:
+          shared-key: build-${{ matrix.settings.target }}
+          save-if: 'true'
+
       # we only need custom caching for docker builds
       # as they are on an older Node.js version and have
       # issues with turbo caching
