--- a/examples/cms-sitecore-xmcloud/.env.example
+++ b/examples/cms-sitecore-xmcloud/.env.example
@@ -1,3 +1,5 @@
+# Read the Vercel + Sitecore docs for the full setup instructions: https://vercel.com/docs/integrations/sitecore
+
 # For development purposes, note Next.js supports a .env.local 
 # file, which is already configured to be git ignored.
 # Read more about Next.js support of environment variables here:
