Consider cargo config in granular cache key (#54700)
x-ref: [slack
thread](https://vercel.slack.com/archives/C04KC8A53T7/p1693270746110069)

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -271,9 +271,9 @@ jobs:
       - name: Cache on ${{ github.ref_name }}
         uses: ijjk/rust-cache@turbo-cache-v1.0.7
         with:
-          shared-key: build-${{ matrix.settings.target }}
           save-if: 'true'
           cache-provider: 'turbo'
+          shared-key: build-${{ matrix.settings.target }}-${{ hashFiles('.cargo/config.toml') }}
 
       # we only need custom caching for docker builds
       # as they are on an older Node.js version and have
