--- a/.github/workflows/issue_validator.yml
+++ b/.github/workflows/issue_validator.yml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   issue-opened:
-    if: "${{ github.event.label.name == 'template: bug' && github.event.action == 'opened' }}"
+    if: "${{ contains(github.event.issue.labels.*.name, 'template: bug') && github.event.action == 'opened' }}"
     name: Issue opened
     runs-on: ubuntu-latest
     steps:
@@ -22,7 +22,7 @@ jobs:
       - name: 'Close without valid reproduction link'
         run: node ./.github/actions/issue-validator/repro-link/index.mjs
   issue-labeled:
-    if: "${{ github.event.label.name == 'template: bug' && github.event.action == 'labeled' }}"
+    if: "${{ contains(github.event.issue.labels.*.name, 'template: bug') && github.event.action == 'labeled' }}"
     name: Issue labeled
     runs-on: ubuntu-latest
     steps:
