--- a/packages/next-swc/crates/next-core/js/tsconfig.json
+++ b/packages/next-swc/crates/next-core/js/tsconfig.json
@@ -16,7 +16,7 @@
     "target": "esnext",
     // modules
     "baseUrl": ".",
-    "module": "Node16",
+    "module": "node16",
     "moduleResolution": "node16",
     "paths": {
       "@vercel/turbopack-next/*": ["src/*"],
